  * **Fix:** TimeLog create/update view callables are now checking if there
    will be any OverBookedError raised.
  * **Fix:** Task create/update dialog now will not list the task itself in
    parent and dependent task lists, if the UI is called with a Task instance
    ({{task}} is not None).
  * **JQueryGantt:**
  
    * **Update:** Context menu is now visible in ``taskRow`` (grid editor).

0.2.0.b6
========

* **SOM**:
  
  * **Fix:** Fixed **LocalSession._write_data()**, previously it was not
    creating the local session folder.
  * **New:** Added a new method called **LocalSession.delete()** to remove the
    local session file.
  * **Update:** **Link.full_path** can now be set to an empty string. This is
    updated in this way for **Version** class.
  * **Update:** Updated the formatting of **SimpleEntity.nice_name**, it is now
    possible to have uppercase letters and camel case format will be preserved.
  * **Update**: **Version.take_name** formatting is enhanced.
  * **New**: **Task** class is now mixed in with **ReferenceMixin** making it
    unnecessary to have **Asset**, **Shot** and **Sequence** classes all mixed
    in individually. Thus removed the **ReferenceMixin** from **Asset**,
    **Shot** and **Sequence** classes.
  * **Update**: Added **Task.schedule_model** validation and its tests.
  * **New**: Added **ScheduleMixin.total_seconds** and
    **ScheduleMixin.computed_total_seconds**.

  **WebUI**:

  * **New**: Added 'duration' field to TimeLog's List dgrid.

0.2.0.b5
========

* **SOM**:

  * **New:** **Version** class now has two new attributes called ``parent`` and
    ``children`` which will be used in tracking of the history of Version
    instances and track which Versions are derived from which Version.
  * **New:** **Versions** instances are now derived from **Link** class and not
    **Entity**.
  * **Update:** Added new revisions to **alembic** to reflect the change in
    **Versions** table.