@@ -347,15 +347,13 @@ a:hover {
 
 }
 
-.dgrid {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: auto;
+/*.dgrid {*/
+    /*position: absolute;*/
+    /*left: 0;*/
+    /*right: 0;*/
+    /*height: auto;*/
 
-}
+/*}*/
 
 /*.dgrid .dgrid-column-name {*/
    /*width: auto;*/
