@@ -23,6 +23,7 @@
     </div>
     <div id='asset_related_data_tab_container'>
         {# Tab View #}
+
     </div>
 </div>
 
@@ -58,14 +59,7 @@
                     style: 'padding: 0; margin:0;'
                 }, 'asset_related_data_tab_container');
 
-                var summary_content_pane = new ContentPane({
-                    title: 'Overview',
-                    href: 'summarize/asset/{{ asset.id }}',
-                    style: 'padding: 0; margin:0;'
 
-                });
-
-                asset_related_data_tab_container.addChild(summary_content_pane);
 
                 {% if has_permission('List_Task') %}
                     var tasks_content_pane = new ContentPane({
@@ -75,6 +69,15 @@
                     });
                     asset_related_data_tab_container.addChild(tasks_content_pane);
                 {% endif %}
+
+                var summary_content_pane = new ContentPane({
+                    title: 'Overview',
+                    href: 'summarize/asset/{{ asset.id }}',
+                    style: 'padding: 0; margin:0;'
+
+                });
+
+                asset_related_data_tab_container.addChild(summary_content_pane);
                 {% if has_permission('List_Ticket') %}
                     var tickets_content_pane = new ContentPane({
                         title: 'Tickets',
